tests/compile_fail/message_trait/gui/engine_message.rs
fn a(_: impl ruci::gui::traits::Message) {}
fn b(m: ruci::engine::Message) {
    a(m);
}

fn main() {}