tests/compile_fail/message_trait/gui/engine_message.stderr
error[E0277]: the trait bound `ruci::engine::Message<'_>: ruci::gui::traits::Message` is not satisfied
 --> tests/compile_fail/message_trait/gui/engine_message.rs:3:7
  |
3 |     a(m);
  |     - ^ the trait `ruci::gui::traits::Message` is not implemented for `ruci::engine::Message<'_>`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `ruci::gui::traits::Message`:
            &ruci::Debug
            &ruci::Go<'_>
            &ruci::IsReady
            &ruci::PonderHit
            &ruci::Position<'_>
            &ruci::Quit
            &ruci::Register<'_>
            &ruci::SetOption<'_>
          and $N others
note: required by a bound in `a`
 --> tests/compile_fail/message_trait/gui/engine_message.rs:1:14
  |
1 | fn a(_: impl ruci::gui::traits::Message) {}
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `a`
